[fix] style CSS
CSS in files [_main-page.scss] [_film-card.scss]:
- Center bottom row of cards
- removed extra margin in card-list in the file [_film-card.scss]:

--- a/src/sass/layout/_film-card.scss
+++ b/src/sass/layout/_film-card.scss
@@ -3,12 +3,12 @@
   grid-template-columns: repeat(1, 280px);
   justify-content: center;
   grid-gap: 20px;
-  margin-top: 20px;
+  // margin-top: 20px;
 
   @media screen and (min-width: 768px) {
     grid-template-columns: repeat(2, 294px);
     grid-gap: 30px;
-    margin-top: 60px;
+    // margin-top: 60px;
   }
 
   @media screen and (min-width: 1024px) {
@@ -18,7 +18,8 @@
 
 .cards-list__item {
   transition: $film-card-transition;
-
+  grid-column: span 2;
+ 
   &:hover,
   &:focus {
     border-radius: $smooth-border;
@@ -41,6 +42,10 @@
       }
     }
   }
+}
+
+.cards-list__item:nth-last-child(-n+2):nth-child(odd) {
+	grid-column: 2 / span 2;
 }
 
 .cards-list__img {
