--- a/src/sass/pages/_main-page.scss
+++ b/src/sass/pages/_main-page.scss
@@ -24,7 +24,7 @@
         grid-gap: 30px;
     }
      @media screen and (min-width: 1024px){
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(6, 1fr);
         grid-auto-rows: minmax(274px, auto);
         margin-bottom: 46px
     }
